[package]
name = "tauri-dumper"
version = "0.1.4-alpha"
edition = "2021"
authors = ["Mason Shi <fishilir@gmail.com>"]
license = "MIT"
description = "A tool to dump assets from a Tauri app"
repository = "https://github.com/Mas0nShi/tauri-dumper"
categories = ["security", "command-line-utilities"]
exclude = [".cargo/*", ".github/*"]
keywords = ["reverse-engineering", "tauri-application", "asset-decompressor", "asset-unpacker"]


[[bin]]
name = "tauri-dumper"
path = "src/main.rs"

[dependencies]
object = "0.36"
memmap2 = "0.9"
brotli = "7.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
normalize-path = "0.2.1"
